# kedro-lsp

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
kedro_lsp/: server.py
