[tool.poetry]
name = "kedro-lsp"
version = "0.1.0"
description = "Kedro Language Server"
authors = ["Lim Hoang <limdauto@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6.2,<3.9"
kedro = "^0.17.3"
pygls = "^0.10.3"

[tool.poetry.dev-dependencies]
pylint = "^2.8.3"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
